# brick-bench

./: .gitignore  Dockerfile  README.md
chameleon-deployment/: lease.sh  populate-tfvars.sh  pyproject.toml  run-playbooks.sh
chameleon-deployment/ansible/: ansible.cfg  brick-bench.yaml  kubernetes.yaml  metrics.yaml
chameleon-deployment/ansible/kubernetes-manifests/: image-gen-cpu.yaml  image-gen.yaml  video-gen-gpu.yaml
chameleon-deployment/ansible/kubernetes-manifests/metrics/: cadvisor.yaml  metrics-server.yaml
chameleon-deployment/src/client/: Dockerfile  comfy_api.py  locustfile.py  pyproject.toml  requirements.txt
chameleon-deployment/src/image-gen/: Dockerfile  comfy_api.py  requirements.txt
chameleon-deployment/src/image-gen/docker/: Dockerfile  locust-dockerfile
chameleon-deployment/src/multimedia/: Cargo.toml
chameleon-deployment/src/multimedia/src/: README.md  main.rs
chameleon-deployment/src/video-decoder/: Cargo.toml
chameleon-deployment/src/video-decoder/client/: Cargo.toml
chameleon-deployment/src/video-decoder/client/src/: main.rs
chameleon-deployment/src/video-decoder/docker/: build.sh  client-dockerfile  server-dockerfile
chameleon-deployment/src/video-decoder/proto/: Cargo.toml  build.rs
chameleon-deployment/src/video-decoder/proto/proto/: video_decode.proto
chameleon-deployment/src/video-decoder/proto/src/: lib.rs
chameleon-deployment/src/video-decoder/server/: Cargo.toml
chameleon-deployment/src/video-decoder/server/src/: main.rs
chameleon-deployment/terraform/: .terraform.lock.hcl  main.tf  variables.tf  versions.tf
chameleon-deployment/utils/: lease.sh  populate-tfvars.sh  quick-scp.sh  quick-ssh.sh
docker/cpu/: Dockerfile
