[package]
name = "server"
edition = "2024"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
ffmpeg-next = "8.0.0"
proto = { path = "../proto" }
tempfile = "3.24"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
uuid = { version = "1.20", features = ["v4"] }
